--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="root">
         <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
             <div class="chat-container d-flex">
-                <!-- parte sinistra -->
+                <!-- PARTE SINISTRA -->
                 <div class="contacts-container">
                     <!-- sezione nome utente -->
                     <div class="profile d-flex justify-content-between align-items-center">
@@ -57,11 +57,11 @@
                     </div>
                     <!-- barra ricerca utenti -->
                     <div class="search-bar d-flex align-items-center">
-                        <input type="text" class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
+                        <input type="text"  v-model.trim="nameFilter" class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
                     </div>
                     <!-- contacts -->
                     <div class="contacts">
-                        <div v-for="(contact,i) in contacts" class="contact border-bottom3px" @click="goToThisChat(i)">
+                        <div v-for="(contact,i) in contacts" class="contact border-bottom3px"  @click="goToThisChat(i)" >
                             <div class="d-flex p-1 align-items-center">
                                 <!-- immagine -->
                                 <img class="rounded-circle" :src="'img/avatar' + contact.avatar + '.jpg'" alt="">
@@ -72,7 +72,7 @@
                         
                     </div>
                 </div>
-                <!-- parte destra -->
+                <!-- PARTE DESTRA -->
                 <div class="message-chat">
                     <!-- ultimo accesso section -->
                     <div class="profile d-flex justify-content-between align-items-center" >
