fixed error "method is not defined"

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                     <!-- barra ricerca utenti -->
                     <div class="search-bar d-flex align-items-center">
-                        <input type="text"  v-model.trim="nameFilter" class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
+                        <input type="text"   class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
                     </div>
                     <!-- contacts -->
                     <div class="contacts">
