--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="root">
         <div class="container d-flex justify-content-center align-items-center" style="height: 100vh">
             <div class="chat-container d-flex">
-                <!-- PARTE SINISTRA -->
+                <!-------------PARTE SINISTRA -------------->
                 <div class="contacts-container">
                     <!-- sezione nome utente -->
                     <div class="profile d-flex justify-content-between align-items-center">
@@ -57,12 +57,12 @@
                     </div>
                     <!-- barra ricerca utenti -->
                     <div class="search-bar d-flex align-items-center">
-                        <input type="text"   class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
+                        <input type="text" v-model.trim="nameFiltered" class="form-control m-3" placeholder="Cerca o inizia una nuova chat">
                     </div>
                     <!-- contacts -->
                     <div class="contacts">
-                        <div v-for="(contact,i) in contacts" class="contact border-bottom3px"  @click="goToThisChat(i)" >
-                            <div class="d-flex p-1 align-items-center">
+                        <div v-for="(contact,i) in filterNames" class="contact"  @click="goToThisChat(i)" >
+                            <div v-if="contact.visible" class="d-flex p-1 align-items-center">
                                 <!-- immagine -->
                                 <img class="rounded-circle" :src="'img/avatar' + contact.avatar + '.jpg'" alt="">
                                 <!-- nome utente dinamico -->
@@ -72,7 +72,7 @@
                         
                     </div>
                 </div>
-                <!-- PARTE DESTRA -->
+                <!-------------------PARTE DESTRA ----------------->
                 <div class="message-chat">
                     <!-- ultimo accesso section -->
                     <div class="profile d-flex justify-content-between align-items-center" >
